# Mercfinan

./: .gitignore  CLAUDE.MD  Dockerfile.api  Dockerfile.worker  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
apps/: __init__.py
apps/api/: main.py
apps/data_worker/: main.py
infra/terraform/: ecs.tf  iam.tf  main.tf  outputs.tf  secrets.tf  variables.tf
src/market_predictor/api/: main.py
src/market_predictor/ml/: inference.py  model.py  preprocessing.py
src/market_predictor/worker/: train.py
tests/: test_architecture.py  test_binance_client.py  test_integration_pipeline.py  test_preprocessing.py
