[tool.poetry]
name = "market-predictor-alpha"
version = "0.1.0"
description = "FastAPI inference API with separate PyTorch training worker"
authors = ["Mercfinan Team <dev@mercfinan.local>"]
packages = [{ include = "market_predictor", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
torch = "^2.5.0"
psycopg = { extras = ["binary"], version = "^3.2.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.27.0"
pandas = "^2.2.3"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
