[tool.poetry]
name = "market-predictor-alpha"
version = "0.1.0"
description = "FastAPI inference API with separate PyTorch training worker"
authors = ["Mercfinan Team <dev@mercfinan.local>"]
packages = [
  { include = "apps" },
  { include = "model_core", from = "packages" },
  { include = "database", from = "packages" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
torch = "^2.5.0"
psycopg = { extras = ["binary"], version = "^3.2.0" }
httpx = "^0.28.1"
pandas = "^2.2.3"
sqlalchemy = "^2.0.36"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages", "."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
